update some method sk transaction